# cryoet-data-portal-croissant

./: .gitignore  LICENSE  README.md  pyproject.toml
.notebook/: test.json  testing.ipynb  tomos.json
.notebook/testdata/: alignments.json  annotationFiles.json  annotationShapes.json  annotations.json  datasets.json  runs.json  tiltseries.json
src/cryoet_data_portal_croissant/: cli.py  gen.py
src/cryoet_data_portal_croissant/_generators/: _alignment.py  _create_joins.py  _dataset.py  _dump_portal.py  _recordset.py  _tiltseries.py  _tomogram.py
src/cryoet_data_portal_croissant/generators/: create_joins.py  dataset.py  dump_tables.py
